# orbag-server/src/main/java/orbag/server/config/ConfigResponse.java
@@ -11,4 +11,25 @@ public class ConfigResponse {
 	public void setAddress(String address) {
 		this.address = address;
 	}
+
+
+	String applicationName;
+
+	String loginMessage;
+
+	public String getApplicationName() {
+		return applicationName;
+	}
+
+	public void setApplicationName(String applicationName) {
+		this.applicationName = applicationName;
+	}
+
+	public String getLoginMessage() {
+		return loginMessage;
+	}
+
+	public void setLoginMessage(String loginMessage) {
+		this.loginMessage = loginMessage;
+	}
 }
